[gd_scene load_steps=4 format=3 uid="uid://byewhoyfiiwq0"]

[ext_resource type="Theme" uid="uid://qicbns858sa7" path="res://Menu&UI/Theme/CraftingTable/CraftingTable.tres" id="1_1s12x"]
[ext_resource type="Script" uid="uid://cw1fjxgwxariw" path="res://Menu&UI/Menu/Shop/AmmoShop/AmmoShop.gd" id="2_6mksb"]
[ext_resource type="Texture2D" uid="uid://h6tgp7guvvij" path="res://Menu&UI/Theme/CraftingTable/Buttons/BuyButton.png" id="3_xh8u7"]

[node name="AmooShop" type="PanelContainer"]
offset_right = 93.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_1s12x")
script = ExtResource("2_6mksb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SpendItem" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="Spending" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "x 0"

[node name="Convert" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "  -->"

[node name="EarnItem" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2

[node name="Earning" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "x 0"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_xh8u7")
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
